# parrot

./: .gitignore  main.py  pyproject.toml
src/parrot/: __init__.py  __main__.py  chrome_controller.py  cli.py  detector.py  interaction.py  screen_capture.py  window_detector.py
src/parrot/screen/: chrome_controller.py  screen.py  web_screen.py  window_detector.py  xcode_screen.py
